@@ -41,9 +41,10 @@ VERSION 2.3.2-Beta 1
       Patch by Richard Longland <rlongland@hotmail.com>.
 
   BUGFIXES:
+    * Fixed Amarok layout saving when minized to tray. (BR 244583)
     * Make "No other participants" in the events applet translatable.
       Patch by Jan Janssen. (BR 235311)
-    * Fix track number on DAAP shares. Patch by Silvio Frischknecht. (BR 235030)
+    * Fixed track number on DAAP shares. Patch by Silvio Frischknecht. (BR 235030)
     * Fixed filtering by rating in the playlist. (BR 240293)
     * The scripts categories are now translatable. (BR 240563)
     * Fixed Amarok 1.4 Database Importer not importing statistics and lyrics of
